# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  perf.data  perf.data.old
src/: coord_cube.cpp  coord_moves.cpp  coord_moves.h  cubie_cube.cpp  cubie_cube.h  defs.h
src/app/: const.h  cube.cpp  cube.h  main copy.cpp  main.cpp  ui.cpp  ui.h
src/libcube/: algorithms.h  coord_cube.h  coord_moves.cpp  coord_moves.h  cube.h  cubie_cube.cpp  cubie_cube.h  defs.h  face_cube.cpp  face_cube.h  ida_search.h  kociemba_solver.cpp  kociemba_solver.h  move.cpp  move.h  move_table.cpp  move_table.h  multi_index.cpp  multi_index.h  phase1.cpp  phase1.h  phase2.cpp  phase2.h  pruning.cpp  pruning.h  searchable.h  sym_conj.cpp  sym_conj.h  symmetries.cpp  symmetries.h  symmetry.cpp  symmetry.h  util.cpp  util.h
src/libcube/coords/: coord_generator.h  corner_perm_generator.cpp  corner_perm_generator.h  corner_twist_generator.cpp  corner_twist_generator.h  edge_flip_generator.cpp  edge_flip_generator.h  multi_coord.cpp  multi_coord.h  sym_coord.cpp  sym_coord.h  ud_perm_generator.cpp  ud_perm_generator.h  ud_slice_perm_generator.cpp  ud_slice_perm_generator.h  ud_slice_pos_generator.cpp  ud_slice_pos_generator.h
src/test/: main.cpp
src/tests/: bicoeff.cpp  combination.cpp  lehmer_code.cpp  test_coords.cpp  test_pruning.cpp  test_solver.cpp  test_symmetries.cpp
